feat: Aplicando tage h1 e p

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aula 2 - Minha primeira página</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <h1>Minha história</h1>
+
+    <p>
+      Sou o <strong>Ramon Alves</strong>, nasci na cidade de São Paulo em 2001
+    </p>
+
+    <h2>De onde vim</h2>
+
+    <p>
+      Eu nasci em 23 de julho de 2001 em um bairro de SP. <br />
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla adipisci
+      voluptates voluptas tempora! Quasi suscipit harum sunt repellendus
+      consequatur veritatis maxime dolor in perspiciatis, non corrupti quia,
+      excepturi ad error!
+    </p>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum explicabo
+      sunt voluptatem est a dignissimos officiis ipsa ex rem dicta! Ea labore id
+      vero aperiam fugiat eos, repudiandae nostrum quae.
+    </p>
+  </body>
 </html>
