feat: adicionar cor ao título

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
+<!-- O doctype diz ao navegador qual o tipo de documento será carregado -->
 <!DOCTYPE html>
+
+<!-- A tag html inicia o nosso documento.
+  O atributo lang informa qual idioma está o conteúdo da página -->
 <html lang="pt-BR">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- O título que aparece na abado navegador -->
     <title>Aula 2 - Minha primeira página</title>
+   
+    <!-- O meta charset informa qual conjunto do caractere será utilizado -->
+    <meta charset="UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+
   <body>
-    <h1>Minha história</h1>
+    <!-- CSS Inline -->
+    <h1 style="color: purple; border: 2px solid blue;">Minha história</h1>
 
     <p>
       Sou o <strong>Ramon Alves</strong>, nasci na cidade de São Paulo em 2001
